# Parallel-Kohn-Sham-Eigensolver-with-Quantum-ESPRESSO

./: BATCH_JOB_GUIDE.md  CMakeLists.txt  GPU_HOWTO.txt  KohnSham_QE_DarkGold.pptx  OPTIMIZATION_SUMMARY.md  README.md  SCALING_GUIDE.md  build_openacc.sh  cb_scaling_37396048.err  cb_scaling_37396048.out  compile.txt  compileCPU.txt  input_file.in  job.sh  job_gpu.sh  newjob.sh  plot_ex3_cpu_hist.py  plot_gpu_scaling_hist.py  plot_scaling.py  plot_timing_t_side_by_side.py  poll_job.sh  sbatjob.sh  slurm.sh  slurm_cpu_vs_gpu.sh  slurm_ex3_cpu.sh  slurm_gpu_scaling.sh  timing_t2_37389647.txt  timing_t4_37389648.txt  timing_t8_37389649.txt
5_jobs/jobs/: annnns  cb_ex5_gpu_37468855.err  cb_ex5_gpu_37468855.out
DEVMEMLIB/: cb_davidson_main.f90
DEVMEMLIB/cb_lib/: CMakeLists.txt
DEVMEMLIB/cb_operators/: CMakeLists.txt
FFTXlib/: CMakeLists.txt
KS_Solvers/: CMakeLists.txt
KS_Solvers/Davidson/: Makefile
LAXlib/: CMakeLists.txt
SCALAPACK_OFF_Data/: ans  qe_t8_37387617.out  qe_t8_37387668.out  qe_t8_37387815.out  qe_t8_37387832.out  qe_t8_37388004.out
SCALAPACK_ON_Data/: qe_t8_37389137.out  qe_t8_37389320.out  qe_t8_37389369.err  qe_t8_37389369.out  qe_t8_37389414.out  qe_t8_37389543.out  qe_t8_37389644.out
build_cpu/: CMakeCache.txt  Makefile  cmake_install.cmake
build_cpu/DEVMEMLIB/: Makefile  cmake_install.cmake
build_cpu/FFTXlib/: Makefile  cmake_install.cmake
build_cpu/FFTXlib/src/: Makefile  cmake_install.cmake
build_cpu/KS_Solvers/: Makefile  cmake_install.cmake
build_cpu/LAXlib/: Makefile  cmake_install.cmake
build_cpu/LAXlib/include/: laxlib_low.fh  laxlib_mid.fh  laxlib_param.fh
build_cpu/LAXlib/mod/qe_lax/: dspev_module.mod  laxlib_descriptor.mod  laxlib_processors_grid.mod  zhpev_module.mod
build_cpu/UtilXlib/: Makefile  cmake_install.cmake
build_cpu/UtilXlib/mod/qe_utilx/: data_buffer.mod  nvtx.mod  parallel_include.mod  util_param.mod
build_cpu/cbToy/: Makefile  cmake_install.cmake
build_cpu/cbToy/cb_lib/: Makefile  cmake_install.cmake
build_cpu/cbToy/cb_operators/: Makefile  cmake_install.cmake
build_gpu/: CMakeCache.txt  Makefile  cbToy.pc  cmake_install.cmake
build_gpu/DEVMEMLIB/: Makefile  cmake_install.cmake
build_gpu/DEVMEMLIB/mod/qe_devmem/: device_memcpy_m.mod
build_gpu/FFTXlib/: Makefile  cmake_install.cmake
build_gpu/FFTXlib/src/: Makefile  cmake_install.cmake
build_gpu/KS_Solvers/: Makefile  cmake_install.cmake
build_gpu/KS_Solvers/include/: ks_solver_interfaces.fh
build_gpu/LAXlib/: Makefile  cmake_install.cmake
build_gpu/LAXlib/include/: laxlib_hi.fh  laxlib_low.fh
build_gpu/UtilXlib/: Makefile  cmake_install.cmake
build_gpu/cbToy/: Makefile  cmake_install.cmake
build_gpu/cbToy/cb_lib/: Makefile  cmake_install.cmake
build_gpu/cbToy/cb_operators/: Makefile  cmake_install.cmake
cbToy/: CMakeLists.txt  cb_davidson_main.f90  cb_davidson_main1.f90  cb_davidson_main2,3.f90  openacc_cb_davidson_main.f90
cbToy/cb_lib/: CMakeLists.txt  cb_davidson_main.f90  cb_davidson_main_123.f90  ggen.f90  mp_global.f90  mp_pools.f90  set_cb_potential.f90  write_bands.f90
cbToy/cb_operators/: CMakeLists.txt  cb_g_psi.f90  cb_h_psi.f90  cb_s_psi.f90  my_h_psi.f90
cmake/: FindNVPLBLACS.cmake
examples/: clean_all  free.in  free2.in  gaas.in  gaas.in.use_overlap  gaas2.in  gaas2.in.use_overlap  output  si.in  si.in.use_overlap  si2.in  si2.in.no_shift  si2.in.use_overlap  si2_11_points.in  si4.in  si4.in.use_overlap  si4_gpu_scaling.in  si4_light.in  si4_parallel_k11.in  si4_parallel_k50.in  si4_scaling.in  znse4.in  znse4.in.use_overlap
examples/SERIAL/results_cb_cg/: free.in.out  free2.in.out  gaas.in.out  gaas2.in.out  si.in.out  si2.in.out  si4.in.out  znse4.in.out
examples/SERIAL/results_cb_cg_gamma/: free.in.out  free2.in.out  gaas.in.out  gaas2.in.out  si.in.out  si2.in.out  si4.in.out  znse4.in.out
examples/SERIAL/results_cb_davidson/: free.in.out  free2.in.out  gaas.in.out  gaas2.in.out  si.in.out  si2.in.out  si4.in.out  znse4.in.out
examples/SERIAL/results_cb_davidson_gamma/: free.in.out  free2.in.out  gaas.in.out  gaas2.in.out  si.in.out  si2.in.out  si4.in.out  znse4.in.out
examples/SERIAL/results_cb_paro/: free.in.out  free2.in.out  gaas.in.out  gaas2.in.out  si.in.out  si2.in.out  si4.in.out  znse4.in.out
examples/SERIAL/results_cb_paro_gamma/: free.in.out  free2.in.out  gaas.in.out  gaas2.in.out  si.in.out  si2.in.out  si4.in.out  znse4.in.out
examples/SERIAL/results_cb_paro_gamma_new/: free.in.out  free2.in.out  gaas.in.out  gaas2.in.out  si.in.out  si2.in.out  si4.in.out  znse4.in.out
examples/SERIAL/results_cb_paro_new/: free.in.out  free2.in.out  gaas.in.out  gaas2.in.out  si.in.out  si2.in.out  si4.in.out  znse4.in.out
examples/SERIAL/results_cb_ppcg/: free.in.out  free2.in.out  gaas.in.out  gaas2.in.out  si.in.out  si2.in.out  si4.in.out  znse4.in.out
examples/SERIAL/results_cb_ppcg_gamma/: free.in.out  free2.in.out  gaas.in.out  gaas2.in.out  si.in.out  si2.in.out  si4.in.out  znse4.in.out
examples/references_cb_davidson/: free.in.out  free2.in.out  gaas.in.out  gaas.in.use_overlap.out  gaas2.in.out  gaas2.in.use_overlap.out  si.in.out  si.in.use_overlap.out  si2.in.out  si2.in.use_overlap.out  si4.in.out  si4.in.use_overlap.out  znse4.in.out  znse4.in.use_overlap.out
include/: device_macros.h
jobs/: annnnnn  cb_ex3_cpu_37491629.out  cb_ex4_37563973.err  cb_ex4_37563973.out  cb_ex4_37565184.err  cb_ex4_37565184.out  cb_ex4_37567049.err  cb_ex4_37567049.out  cb_ex4_37567545.err  cb_ex4_37567545.out  cb_ex4_37568135.err  cb_ex4_37568135.out  cb_gpu_scaling_37554806.err  cb_gpu_scaling_37554806.out  cb_gpu_scaling_37554972.err  cb_gpu_scaling_37554972.out  cb_gpu_scaling_37555112.err  cb_gpu_scaling_37555112.out  cb_gpu_scaling_37555240.err  cb_gpu_scaling_37555240.out  cb_gpu_scaling_37555576.out  ex4data.out  plot.py  plot_cpu_vs_gpu_37444496.py  plot_gpu_scaling.py  plot_gpu_scaling_37440513.py  plot_scaling_histograms.py  plot_timing_t_side_by_side.py  timing_37389445.txt  timing_t16_37389651.txt  timing_t1_37389645.txt  timing_t32_37389652.txt  timings.tsv
(+33 files in other folders)
